update pom
Former-commit-id: f90878b0da7cb04ef13d462e857734255b4b8f87