@@ -156,11 +156,11 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson-core.version}</version>
 			</dependency>
-			  <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>${commons-io.version}</version>
-    </dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
@@ -376,12 +376,22 @@
 					<source>17</source>
 					<target>17</target>
 					<!--debug>true</debug>-->
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.loader=dawdler.client.plug</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.1</version>
+				<version>3.2.1</version>
 			</plugin>
 			<plugin>
 				<!-- -N versions:update-child-modules -->
